# arco_ros_utils

./: README.md  zshrc
arco_ros_cpp_template/local_guidance_widget_manager/: CMakeLists.txt  package.xml
arco_ros_cpp_template/local_guidance_widget_manager/config/: parameters.yaml
arco_ros_cpp_template/local_guidance_widget_manager/include/local_guidance_widget_manager/: LocalGuidanceWidgetManager.hpp
arco_ros_cpp_template/local_guidance_widget_manager/launch/: local_guidance_widget_manager.launch
arco_ros_cpp_template/local_guidance_widget_manager/src/: LocalGuidanceWidgetManager.cpp  local_guidance_widget_manager_node.cpp
arco_ros_utils/: CMakeLists.txt  package.xml  varia.txt  video_editing  video_editing.txt
arco_ros_utils/scripts/: tf_echo_py.py  tf_remove_frames.py
arco_ros_utils/src/: tf_echo_cpp.cpp
arco_ros_utils_bash/: configure_ros_network.sh
arco_ros_utils_kalibr/: .gitignore
arco_ros_utils_kalibr/template_flir_rgb/scripts/: anymal_imu_flir_tf.m  script.txt
arco_ros_utils_kalibr/template_uvc_realsense/scripts/: anymal_external_pose_calibration.m  script.txt  tsif_external_pose_calibration.m
arco_ros_utils_kalibr/template_visensor/: .gitignore  camchain-imucam-sfront_cameras_robot_extrinsics.bag.yaml  results-imucam-sfront_cameras_robot_extrinsics.bag.txt
arco_ros_utils_kalibr/template_visensor/parameter_files/: imu_adis16448.yaml  imu_xsens_mti_100.yaml
arco_ros_utils_kalibr/template_visensor/scripts/: anymal_imu_to_visensor_frames.m  script.txt
arco_ros_utils_launch/: CMakeLists.txt  package.xml
arco_ros_utils_launch/cfg/: debug_traversability_estimation.pose_in_odom  debug_traversability_estimation.rviz  urdf.rviz
arco_ros_utils_launch/launch/: debug_traversability_estimation.launch  node_manager_test_lpc_npc.launch  realsense.launch  roscpp_tutorials_talker.launch  test.launch  urdf.launch  uvc.launch  visensor.launch
arco_ros_utils_matlab/: invert_transformation.m  transformation2static_transform_publisher.m
arco_ros_utils_py/: CMakeLists.txt  package.xml
arco_ros_utils_py/scripts/: tf_echo.py
arco_ros_utils_record_scripts/uvc_realsense/: record_cameras_imus.sh
arco_ros_utils_record_scripts/visensor/: record_cameras_imus.sh
arco_ros_utils_terminal/: configure_ros_network.sh  configure_ros_network_wifi.sh  extra_features.txt  p10k.zsh  zsh_aliases  zshrc
