<?xml version="1.0"?>
<package format="2">
  <name>arco_ros_utils</name>
  <version>0.1.0</version>
  <description>Collections of ROS Python scripts / C++ nodes.</description>
  <maintainer email="marcot@ethz.ch">Marco Tranzatto</maintainer>
  <author email="marcot@ethz.ch">Marco Tranzatto</author>

  <license>ToBeDefined</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>tf</depend>
</package>