<?xml version="1.0"?>
<package format="2">
  <name>arco_ros_utils_launch</name>
  <version>0.1.0</version>
  <description>Collections of ROS launch files.</description>
  <maintainer email="marcot@ethz.ch">Marco Tranzatto</maintainer>
  <author email="marcot@ethz.ch">Marco Tranzatto</author>

  <license>ToBeDefined</license>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>